[build-system]
requires = ['setuptools >=62', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'cassandra-lwt-migration-tool'
description = 'Tool to help resolve Cassandra LWTs during large topology changes.'
dynamic = ['dependencies', 'version']
readme = 'README.md'
requires-python = '>=3.7'
authors = [
    {name = "Backblaze"}
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS'
]


[project.scripts]
cassandra_lwt_migration_tool = 'cassandra_lwt_migration_tool.cli:main'

[project.optional-dependencies]
dev = [
    'black',
    'build',
    'pyre-check',
    'twine'
]

[tool.setuptools]
packages = ['cassandra_lwt_migration_tool',
            'cassandra_lwt_migration_tool.data']

[tool.setuptools.dynamic]
dependencies = { file = 'requirements.txt' }
version = { file = 'VERSION' }

[tool.setuptools.package-data]
cassandra_lwt_migration_tool = []

[tool.black]
line-length = 110
include = '/cassandra_lwt_migration_tool/.*\.py$'
